hq/hub-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: selenium-grid
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2024-06-27T11:14:11Z"
  labels:
    app: selenium-grid-selenium-hub
    app.kubernetes.io/component: selenium-grid-4.22.0-20240621
    app.kubernetes.io/instance: selenium-grid
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 4.22.0-20240621
    helm.sh/chart: selenium-grid-0.32.0
  name: selenium-grid-selenium-hub
  namespace: default
  resourceVersion: "28708"
  uid: 55746709-a1a1-473d-b8b4-bcbed87ed4b9
spec:
  clusterIP: 10.68.219.2
  clusterIPs:
  - 10.68.219.2
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-hub
    nodePort: 31458
    port: 4444
    protocol: TCP
    targetPort: 4444
  - name: tcp-hub-pub
    nodePort: 30763
    port: 4442
    protocol: TCP
    targetPort: 4442
  - name: tcp-hub-sub
    nodePort: 30636
    port: 4443
    protocol: TCP
    targetPort: 4443
  selector:
    app: selenium-grid-selenium-hub
    app.kubernetes.io/instance: selenium-grid
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
